Testing
Testing all the models and endpoints and making sure it works per model.
Having trouble with implementing trail at the moment mainly due to trailfeaturejoin. Debugging each one so it works in uninson - testing with postman
